Fixat och trixat

--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -1,5 +1,5 @@
 
-CFLAGS = 
+CFLAGS = -Wall -Wextra -pedantic -O2
 
 LFLAGS= -lpthread -lrt -lm
 
@@ -7,6 +7,18 @@ all: blurc thresc
 
 clean:
 	-$(RM) *.o blur thresc
+
+ppmio.o: ppmio.c ppmio.h
+	gcc -o ppmio.o -c $(CFLAGS) ppmio.c
+
+gaussw.o: gaussw.c gaussw.h
+	gcc -o gaussw.o -c $(CFLAGS) gaussw.c
+
+blurfilter.o: blurfilter.c blurfilter.h
+	gcc -o blurfilter.o -c $(CFLAGS) blurfilter.c
+
+blurmain.o: blurmain.c
+	gcc -o blurmain.o -c $(CFLAGS) blurmain.c
 
 blurc: ppmio.o gaussw.o blurfilter.o blurmain.o
 	gcc -o $@ ppmio.o gaussw.o blurfilter.o blurmain.o $(LFLAGS)
